--- a/index.html
+++ b/index.html
@@ -209,6 +209,16 @@
               </div>
               <p class="skill-desc">Structuring and styling web pages, like this one!</p>
             </div>
+
+            <div class="skill-block">
+              <div class="skill-name">GOOGLE SHEETS</div>
+              <div class="skill-bar-label">PROFICIENCY</div>
+              <div class="skill-bar-track">
+                <div class="skill-bar-fill" style="width: 80%;"></div>
+              </div>
+              <p class="skill-desc">Creating advanced Google Sheets, with in-depth App Script integrations.</p>
+            </div>
+
           </div>
         </section>
 
